# flight-radar

./: .gitignore  Dockerfile  Pipfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  pytests.ini  setup.py
.github/workflows/: docker_ci.yml
flight_radar/: cli.py  errors.py  logger.py  settings.py
flight_radar/models/: __init__.py  config.py  entities.py  models.py  pydantic_validators.py  schemas.py  types.py
flight_radar/repos/: __init__.py  adapters.py  db_repo.py  interfaces.py  scrapper.py  scrapper_config_handler.py  types.py
flight_radar/tests/: conftest.py  docker-compose-test.yml  fake_store_api.http  test_db_repo.py  test_scrapper_api.py  test_utils.py
flight_radar/tests/fixtures/: flight_fixture.json  flight_out.json
flight_radar/use_cases/: base_use_case.py
flight_radar/utils/: db_config.py  exceptions.py  helpers.py  mock_response_object_for_debug_mode.py  scrapper_config.py  utils.py
migrations/models/: 0_20231028235255_init.py  3_20231031174447_update.py  4_20231031175445_update.py
